--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_URL=http://192.168.10.10
 DB_CONNECTION=mysql
 DB_HOST=10.0.2.15
 DB_PORT=3306
-DB_DATABASE=bookstore
+DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
